=================
Changes for Crate
=================

Unreleased
==========

 - Fixed an issue with concurrent INSERT requests that could fail due to using
   a shared state internally.

 - IN operator NULL literals bug fix

 - COPY FROM / COPY TO will now automatically create a quoted URI if only a
   path is given.

 - Updated crash to version 0.11.4 which contains following changes:

    - Fix: print stacktrace when crash is launched in verbose mode

    - Fix: query duration was rounded incorrectly to second precision

 - Support `ON DUPLICATE KEY UPDATE` while inserting using a query.

 - Fix: Parameter substitution within subscript notation is not
   allowed anymore

 - Updated crash version to 0.11.2 which contains following changes:

    - added ``--format`` command line option
      to support different response output formats such as
      ``tabular``, ``raw``, ``json``, ``csv`` and ``mixed``

    - BREAKING CHANGE
      the ``CONNECT <host>`` client command was changed to ``\connect <host>``
      see documentation for further details

    - alternative cli implementation using prompt_toolkit

    - added coloured printing when in interactive shell

 - Optimize OR queries which involve the cluster column.

 - Removed support for ``_version`` column in where clause if no
   primary key is specified in a query.

 - Added support for the ``IF EXISTS`` clause to ``DROP TABLE`` and
   ``DROP BLOB TABLE``

2015/03/11 0.47.6
=================

 - Fixed an issue with custom schemas that could cause select statements on the
   ``information_schema.tables`` table to result in a NPE.

 - Fixed an issue that could cause the response to contain the wrong types
   (e.g. integer instead of long)

 - Fix: Sorting on a scalar with a column containing NULL values as
   argument no longer throws an NPE

 - Fix: group by on clustered by column on a partitioned table now produces
   correct results for groups spanning different partitions
